knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg_Node_Association__c/pqcrush__RM_Svg_Node_Association__c.object-meta.xml
<CustomObject>
    <label>RM Svg Node Association</label>
    <nameField>
        <label>RM Svg Node Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RM Svg Node Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>