knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg_Node_Association__c/fields/pqcrush__Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>pqcrush__Relationship_Map__c</referenceTo>
    <relationshipLabel>RM Svg Node Associations</relationshipLabel>
    <relationshipName>RM_Svg_Node_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>