knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Svg_Node_Association__c/fields/pqcrush__RM_Svg__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__RM_Svg__c</fullName>
    <label>RM Svg</label>
    <referenceTo>pqcrush__RM_Svg__c</referenceTo>
    <relationshipLabel>RM Svg Node Associations</relationshipLabel>
    <relationshipName>RM_Svg_Node_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>